--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -32,13 +32,10 @@ jobs:
           destination_dir: ''
         if: github.ref == 'refs/heads/master'
 
-      - uses: shallwefootball/s3-upload-action@master
-        with:
-          aws_key_id: ${{ secrets.AWS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-          aws_bucket: thelist.app
-          source_dir: build
-          destination_dir: ${{github.ref}}
+      - run: aws s3 cp build s3://${{ secrets.BUCKET_NAME }}/${{github.ref}} --recursive
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
         if: github.ref != 'refs/heads/master'
 
       - name: comment PR
