--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -29,6 +29,7 @@ jobs:
           node-version: 12.x
 
       - run: npm install
+      - run: npm test
       - run: npm run build
 
       - run: aws s3 cp build s3://${{ secrets.BUCKET_NAME }}/ --recursive
