--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -21,6 +21,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-2
 
+      - name: Set the path
+        run: echo "path=${{github.ref}}" >> $GITHUB_ENV
+        if: github.ref != 'refs/heads/main'
+
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
@@ -29,18 +33,15 @@ jobs:
       - run: npm install
       - run: npm test
       - run: npm run lint
-      - run: npm run build
+      - run: PUBLIC_URL=$path npm run build
 
-      - run: aws s3 cp build s3://${{ secrets.BUCKET_NAME }}/ --recursive
-        if: github.ref == 'refs/heads/main'
-      - run: aws s3 cp build s3://${{ secrets.BUCKET_NAME }}/${{github.ref}} --recursive
-        if: github.ref != 'refs/heads/main'
+      - run: aws s3 cp build s3://${{ secrets.BUCKET_NAME }}/$path --recursive
 
       - name: comment PR
         uses: unsplash/comment-on-pr@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          msg: "Check out a preview at https://thelist.app/${{github.ref}}!"
+          msg: "Check out a preview at https://thelist.app/$path!"
           check_for_duplicate_msg: true
         if: github.ref != 'refs/heads/main'
