--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,7 +21,7 @@
     }
   ],
   "start_url": "./",
-  "scope": ".",
+  "scope": "./",
   "display": "standalone",
   "theme_color": "#8ab661",
   "background_color": "#ffffff"
