fix comment on PR

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -44,6 +44,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          msg: Check out a preview at https://dev.thelist.app/${path}!
+          msg: Check out a preview at https://dev.thelist.app/${{github.ref}}!
           check_for_duplicate_msg: true
         if: github.ref != 'refs/heads/main'
