--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Set the path
         run: |
-          echo "path=/" >> $GITHUB_ENV
+          echo "path=${{github.ref}}" >> $GITHUB_ENV
           echo "prefix=dev." >> $GITHUB_ENV
         if: github.ref != 'refs/heads/main'
 
@@ -37,7 +37,7 @@ jobs:
       - run: npm run lint
       - run: npm run build
 
-      - run: aws s3 cp build s3://${prefix}${{ secrets.BUCKET_NAME }}${path} --recursive
+      - run: aws s3 cp build s3://${prefix}${{ secrets.BUCKET_NAME }}/${path} --recursive
 
       - name: comment PR
         uses: unsplash/comment-on-pr@master
