--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
                 "assert": "either",
                 "depth": 25
             }
-        ]
+        ],
+        "object-curly-newline": "off"
     }
 }
