--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-notifications": "^1.7.2",
-    "react-scripts": "4.0.1"
+    "react-scripts": "^4.0.1",
+    "workbox-core": "^6.0.2",
+    "workbox-expiration": "^6.0.2",
+    "workbox-precaching": "^6.0.2",
+    "workbox-routing": "^6.0.2",
+    "workbox-strategies": "^6.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
